# microsoft-graph-mcp-server

./: AZURE_SETUP.md  EXAMPLES.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  agent-card.json  claude_desktop_config.example.json  install.ps1  install.sh  mcp_graph_server.py  pyproject.toml
